# redis-search-django

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  docker-compose.yaml  pyproject.toml  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: changelog-ci.yaml  pypi_publish.yaml  test.yml
django_redis_search/: apps.py  documents.py  paginator.py  query.py  signals.py
django_redis_search/management/commands/: index.py
example/: README.md  manage.py  requirements.txt
example/core/: admin.py  documents.py  import.py  models.py  urls.py  views.py
example/core/migrations/: 0001_initial.py
example/core/templates/core/: search.html
example/core/templatetags/: build_query_string.py
example/example/: asgi.py  settings.py  urls.py  wsgi.py
redis_search_django/: apps.py  config.py  documents.py  mixins.py  query.py  registry.py  signals.py
redis_search_django/management/commands/: index.py
tests/: conftest.py  django_settings.py  helpers.py  models.py  test_documents.py  test_integration.py  test_management_command.py  test_mixins.py  test_paginator.py  test_query.py  test_registry.py  test_signals.py  utils.py
