[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--ds=tests.django_settings --cov=redis_search_django --cov-report xml"

[tool.mypy]
mypy_path = "redis_search_django/"
check_untyped_defs = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.black]
target-version = ['py310']

[tool.isort]
profile = "black"
