[metadata]
name = redis-search-django
version = 0.1.0
description = Django Integration with Redis Search
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/saadmk11/redis-search-django
author = Maksudul Haque
author_email = saad.mk112@gmail.com
keywords =
    Django
    Redis
    Search
    RediSearch
classifiers =
    Development Status :: 4 - Beta
    Natural Language :: English
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = redis_search_django
include_package_data = True
python_requires = >=3.7
install_requires =
    django>=3.2
    redis-om>=0.0.27

[options.packages.find]
where = .

[coverage:run]
branch = True
parallel = True
source =
    redis_search_django
    tests

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:

[coverage:paths]
source = .

[flake8]
max-line-length = 88
